--- a/README
+++ b/README
@@ -1,1 +1,4 @@
 A Simple HTML5 Game To-be used in a Tutorial
+
+Slides up at:
+http://www.slideshare.net/cykod/html5-game-development-introduction-5815787
